--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: merceria_fat
-description: A new Flutter project.
+description: Un proyecto que busca ayudar a los alumnos del area de TIC de la UTM.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -29,6 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.0.2
+  shared_preferences: ^2.0.13
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,6 +40,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/Icon/fat.png"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -45,8 +55,11 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
 
 # The following section is specific to Flutter.
 flutter:
@@ -57,7 +70,10 @@ flutter:
   uses-material-design: true
 
   assets:
-    - lib/images/trofeo.png
+    - assets/images/trofeo.png
+    - assets/images/Club_IMG.png
+    - assets/images/404.png
+    - assets/images/tournament.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
